# tunes4r_player

./: .gitignore  CHANGELOG.md  CODE_REVIEW.md  Makefile  PERFORMANCE_OPTIMIZATIONS.md  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: build_tunes4r_player.yml
.kilo/plans/: 1780615772880-cosmic-rocket.md  1780627616755-quick-planet.md  1781029305019-misty-knight.md
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/tunes4r_player/tunes4r_player/: Tunes4rPlayerPlugin.java
docs/: FIRST_ASSESMENT.md  PROJECT_CONTEXT.md  REQUIREMENTS.md  SESSION_LOG.md
docs/adr/: 001-audio-queue-channel-contract.md
example/: .flutter-plugins-dependencies  README.md  pubspec.yaml  stereo.xcf
example/android/: local.properties
example/android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
example/lib/: main.dart
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: ffi_seek_test.dart  widget_test.dart  yt_stream_seek_test.dart
ios/: Package.swift  tunes4r_player.podspec
ios/Classes/: Tunes4rPlayerPlugin.swift
lib/: tunes4r_player.dart
lib/src/: audio_engine.dart  models.dart  tunes4r_player_ffi.dart
macos/: Package.swift  tunes4r_player.podspec
macos/.build/arm64-apple-macosx/debug/index/db/v13/p71814--327b04/: lock.mdb
macos/Classes/: Tunes4rPlayerPlugin.swift
macos/tunes4r_player/: Package.swift
macos/tunes4r_player/.build/index-build/: workspace-state.json
macos/tunes4r_player/XCFrameworks/libtunes4r.xcframework/: Info.plist
macos/tunes4r_player/XCFrameworks/libtunes4r.xcframework/macos-arm64/libtunes4r.framework/: libtunes4r
macos/tunes4r_player/XCFrameworks/libtunes4r.xcframework/macos-arm64/libtunes4r.framework/Versions/A/Resources/: Info.plist
rust/: Cargo.toml  build.rs  cbindgen.toml
rust/assets/: stereo_on.png.bk
rust/crates/core/: Cargo.toml
rust/crates/core/src/: dsp.rs  lib.rs  models.rs
rust/crates/core/src/audio/: buffer.rs  cache.rs  http.rs  mod.rs  platform.rs
rust/crates/core/src/audio/decoder/: file_decoder.rs  mod.rs  seek.rs
rust/crates/core/src/audio/engine/: commands.rs  context.rs  mod.rs  state.rs  types.rs
rust/crates/core/src/audio/stream/: buffer.rs  cpal_source.rs  handling.rs  stream_download.rs
rust/crates/core/src/audio/stream/decorator/: adaptive.rs  cache.rs  caching.rs  mod.rs  retry.rs
rust/crates/core/src/audio/stream/source/: file.rs  live.rs  mod.rs  pipe.rs  pipeline.rs  radio.rs  youtube.rs
rust/crates/youtube/: Cargo.toml
rust/crates/youtube/src/: client.rs  extractor.rs  formats.rs  js.rs  lib.rs  manifest.rs  pot.rs  search.rs  stream.rs  video.rs  watch.rs
rust/examples/: audio_test.rs  diagnose_clients.rs  play_song.rs  play_song_pipe.rs  play_stream.rs  play_youtube.rs  play_youtube_adaptive.rs  play_youtube_with_seek.rs  test_duration_deser.rs  test_engine_seek.rs  test_manifest.rs  test_pot.rs  test_youtube_seek.rs  tui_player.rs  winamp_classic.rs  winamp_tui.rs  winamp_tui_copy.rs  winamp_ui2.rs  winamptest_ui.rs  yt_explode.rs  yt_service.rs
rust/specs/: lcdpanel.md  winamp.md  winamp_classic_fixed.html
rust/src/: audio_http_fetch.rs  classifier.rs  dsp.rs  ffi.rs  lib.rs  models.rs
rust/src/audio/: error.rs  http.rs  mod.rs
rust/src/audio/decoder/: android_file_decoder.rs  file_decoder.rs  ios_file_decoder.rs  mod.rs  seek.rs  symphonia_decoder.rs
rust/src/audio/engine/: commands.rs  context.rs  state.rs  types.rs
rust/src/audio/stream/: buffer.rs  cpal_source.rs  handling.rs  loader.rs  mod.rs  pipe.rs  queue_source.rs  reader.rs  stream_download.rs
rust/src/audio/stream/decorator/: adaptive.rs  mod.rs  retry.rs
rust/src/audio/stream/source/: live.rs  mod.rs  radio.rs  youtube.rs
rust/src/youtube/: client.rs  extractor.rs  formats.rs  js.rs  js_engine.rs  manifest.rs  mod.rs  search.rs  stream.rs  video.rs
rust/tests/: decode_queue_backpressure.rs  ffi_contract.rs  mock_youtube_stream.rs  real_youtube_stream.rs  seek_streaming.rs  streaming_download.rs  test_real_youtube.rs  yt_stream_seek.rs
rust/tests/fixtures/: youtube_stream.json
scripts/: build_rust.sh  prepare_publish.sh
test/: models_test.dart
