[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/youtube",
]

[package]
name = "tunes4r"
version = "1.0.0"
edition = "2021"

[lib]
name = "tunes4r"
crate-type = ["cdylib", "staticlib", "rlib"]

[[example]]
name = "play_stream"
path = "examples/play_stream.rs"

[[example]]
name = "play_youtube"
path = "examples/play_youtube.rs"

[[example]]
name = "yt_service"
path = "examples/yt_service.rs"

[[example]]
name = "yt_explode"
path = "examples/yt_explode.rs"

[[example]]
name = "play_youtube_with_seek"
path = "examples/play_youtube_with_seek.rs"

[[example]]
name = "tui_player"
path = "examples/tui_player.rs"

[features]
default = ["rustls-platform-verifier"]
rustls-platform-verifier = ["dep:rustls-platform-verifier", "dep:rustls"]
classifier = []

[profile.release]
panic = "unwind"

[build-dependencies]
cbindgen = "0.29.2"

[dependencies]
tunes4r-core = { path = "crates/core" }
tunes4r-youtube = { path = "crates/youtube" }
flutter_rust_bridge = "2.3"
log = "0.4"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
cpal = "0.17.3"
tracing-subscriber = "0.3"
symphonia = { version = "0.6", features = ["mp3", "aac", "flac", "vorbis", "ogg", "mkv", "isomp4"] }
symphonia-bundle-mp3 = "0.6"
symphonia-codec-aac = "0.6"
symphonia-codec-vorbis = "0.6"
symphonia-bundle-flac = "0.6"
symphonia-adapter-libopus = { version = "0.3", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking", "rustls-tls", "rustls-tls-native-roots"], default-features = false }

[target.'cfg(not(target_os = "android"))'.dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "rustls-tls-native-roots"] }

[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2"
ndk-context = "0.1"
jni = { version = "0.21", default-features = false }
android_logger = "0.15"

[target.'cfg(target_os = "android")'.dependencies.log]
version = "0.4"

[dependencies.rustls-platform-verifier]
version = "0.6.2"
optional = true

[dependencies.rustls]
version = "0.23"
features = ["ring"]
optional = true

[dev-dependencies]
ratatui = "0.29"
crossterm = "0.28"
