[package]
name = "tunes4r-core"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[features]
default = ["rustls-platform-verifier"]
rustls-platform-verifier = ["dep:rustls-platform-verifier", "dep:rustls"]

[dependencies]
tunes4r-youtube = { path = "../youtube" }
cpal = "0.17.3"
symphonia = { version = "0.6", features = ["mp3", "aac", "flac", "vorbis", "ogg", "mkv", "isomp4"] }
symphonia-bundle-mp3 = "0.6"
symphonia-codec-aac = "0.6"
symphonia-codec-vorbis = "0.6"
symphonia-bundle-flac = "0.6"
symphonia-adapter-libopus = { version = "0.3", features = ["bundled"] }
stream-download = { version = "0.24", features = ["registry", "reqwest-rustls"] }
rustfft = "6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
log = "0.4"
parking_lot = "0.12"
crossbeam = "0.8"
ringbuf = "0.4"
reqwest = { version = "0.12", features = ["json", "stream", "blocking", "rustls-tls", "rustls-tls-native-roots"], default-features = false }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
futures = "0.3"
futures-util = "0.3"
num-complex = "0.4"
num-traits = "0.2"
url = "2.5.8"
id3 = "1.17.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "rustls-tls-native-roots"] }

[dependencies.rustls-platform-verifier]
version = "0.6.2"
optional = true

[dependencies.rustls]
version = "0.23"
features = ["ring"]
optional = true

[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2"
ndk-context = "0.1"
jni = { version = "0.21", default-features = false }
log = "0.4"
android_logger = "0.15"
symphonia-bundle-mp3 = "0.6"
symphonia-codec-aac = "0.6"
symphonia-codec-vorbis = "0.6"
symphonia-bundle-flac = "0.6"
stream-download = { version = "0.24", features = ["registry", "reqwest-rustls"] }
